<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d48"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/d72"
            android:layout_height="@dimen/d72"
            android:src="@drawable/lifeng" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:paddingBottom="3dp"
            android:text="@string/pos_name"
            android:textSize="@dimen/material_typography_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_input_corners"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="8dp" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/jh_img16" />

            <EditText
                android:id="@+id/et_ipAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_jhdress"
                android:padding="5dp"
                android:textSize="@dimen/material_typography_button" />

            <ImageView
                android:id="@+id/iv_YesOrNO"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:onClick="clearAddress" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="8dp" >

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/login_key" />

            <EditText
                android:id="@+id/et_jhm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_jhcode"
                android:numeric="integer"
                android:padding="5dp"
                android:textSize="@dimen/material_typography_button" />

            <ImageView
                android:id="@+id/iv_jhm_yesorno"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:onClick="clearJhm" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_read"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/jh_img17" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/read_over"
            android:textSize="@dimen/material_typography_button" />

        <TextView
            android:id="@+id/tv_service_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/instruction"
            android:textColor="@color/material_orange_900"
            android:textSize="@dimen/material_typography_button" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_activate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/blue_cornerbutton_selector"
        android:onClick="BtnActivate"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/jh"
        android:textColor="@color/white"
        android:textSize="@dimen/material_typography_headline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="getRegisterId"
            android:text="@string/get_register_id"
            android:textColor="@color/material_orange_900"
            android:textSize="@dimen/material_typography_button"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/sjzx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="right"
            android:text="@string/merchat_info"
            android:textColor="@color/material_orange_900"
            android:textSize="@dimen/material_typography_button" />
    </LinearLayout>
</LinearLayout>
