<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/font_white_color"
    android:orientation="vertical"
    >

    <include layout="@layout/include_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/bady_bg" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:background="@color/gray_font" />

            <TextView
                android:id="@+id/operators"
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_component_lists_single_line_height"
                android:background="@drawable/btn_keyboard_key"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/operator_manager"
                android:textSize="@dimen/material_typography_caption" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/x1"
                android:layout_marginLeft="@dimen/material_component_lists_icon_left_padding"
                android:layout_marginRight="@dimen/material_component_lists_icon_left_padding"
                android:background="@color/gray_font" />

            <TextView
                android:id="@+id/reset_again"
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_component_lists_single_line_height"
                android:background="@drawable/btn_keyboard_key"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/system_reset"
                android:textSize="@dimen/material_typography_caption" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/x1"
                android:layout_marginLeft="@dimen/material_component_lists_icon_left_padding"
                android:layout_marginRight="@dimen/material_component_lists_icon_left_padding"
                android:background="@color/gray_font"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/print_set"
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_component_lists_single_line_height"
                android:background="@drawable/btn_keyboard_key"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/print_set"
                android:textSize="@dimen/material_typography_caption"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:background="@color/gray_font" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/bady_bg" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:background="@color/gray_font" />

            <TextView
                android:id="@+id/aid_down"
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_component_lists_single_line_height"
                android:background="@drawable/btn_keyboard_key"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/aid_download"
                android:textSize="@dimen/material_typography_caption" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/x1"
                android:layout_marginLeft="@dimen/material_component_lists_icon_left_padding"
                android:layout_marginRight="@dimen/material_component_lists_icon_left_padding"
                android:background="@color/gray_font" />

            <TextView
                android:id="@+id/center_businesses_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_component_lists_single_line_height"
                android:background="@drawable/btn_keyboard_key"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/merchat_info"
                android:textSize="@dimen/material_typography_caption" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/x1"
                android:layout_marginLeft="@dimen/material_component_lists_icon_left_padding"
                android:layout_marginRight="@dimen/material_component_lists_icon_left_padding"
                android:background="@color/gray_font" />

            <TextView
                android:id="@+id/about_us"
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_component_lists_single_line_height"
                android:background="@drawable/btn_keyboard_key"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/about_us"
                android:textSize="@dimen/material_typography_caption" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/x1"
                android:layout_marginLeft="@dimen/material_component_lists_icon_left_padding"
                android:layout_marginRight="@dimen/material_component_lists_icon_left_padding"
                android:background="@color/gray_font" />

            <TextView
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_component_lists_single_line_height"
                android:background="@drawable/btn_keyboard_key"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/system_exit"
                android:textSize="@dimen/material_typography_caption" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:background="@color/gray_font" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bady_bg" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>