<?xml version="1.0" encoding="utf-8"?>
<!-- 关于我们 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_white_color"
    android:orientation="vertical" >

    <include layout="@layout/include_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/pos_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/f300pos_login" />

        <TextView
            android:id="@+id/show_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            tools:text="I am a title"
            android:textColor="@color/minor_text"
            android:textSize="@dimen/material_typography_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/font_white_color"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/check_update"
            android:layout_width="match_parent"
            android:layout_height="@dimen/material_component_lists_single_line_height"
            android:background="@drawable/btn_keyboard_key"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/version_update"
            android:textSize="@dimen/material_typography_caption" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/gray_font" />

        <TextView
            android:id="@+id/questions_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/material_component_lists_single_line_height"
            android:background="@drawable/btn_keyboard_key"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/question_lists"
            android:textSize="@dimen/material_typography_caption" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/gray_font" />

        <TextView
            android:id="@+id/company_lifeng_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/material_component_lists_single_line_height"
            android:background="@drawable/btn_keyboard_key"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/company_info"
            android:textSize="@dimen/material_typography_caption" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/gray_font" />

        <TextView
            android:id="@+id/service_agreement"
            android:layout_width="match_parent"
            android:layout_height="@dimen/material_component_lists_single_line_height"
            android:background="@drawable/btn_keyboard_key"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/service_info"
            android:textSize="@dimen/material_typography_caption" />

    </LinearLayout>
</LinearLayout>